--- a/style.css
+++ b/style.css
@@ -1,110 +1,137 @@
 body {
-    font-family: Arial, sans-serif;
-    text-align: center;
-    background-color: #f7f7f7; 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh;
-    margin: 0;     
+  font-family: Arial, sans-serif;
+  text-align: center;
+  background-color: #f7f7f7;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  margin: 0;
 }
 
-img{
-    border-radius: 10px;
+footer {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f7f7f7;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 5vh;
+}
+
+img {
+  border-radius: 10px;
 }
 
 .image-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .image {
-    width: 250px;
-    height: auto;
-    margin: 10px;
+  width: 250px;
+  height: auto;
+  margin: 10px;
 }
 
 .container {
-    padding: 20px;
-    border: 1px solid #ccc;
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
-    max-width: 600px;
-    margin: 0 auto;
-    margin-top: 30px;
+  padding: 20px;
+  border: 1px solid #ccc;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+  margin: 0 auto;
+  margin-top: 15px;
+  justify-content: space-between;
+  width: 50%;
+  max-width: 500px;
 }
 
 .containerbox {
-    display: flex;
-    justify-content: space-between;
-    width: 50%;
-    max-width: 800px;
-    padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  width: 50%;
+  max-width: 800px;
+  padding: 20px;
 }
 
 .box {
-    flex: 1;
-    border: 1px solid #ccc;
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    padding: 20px;
-    margin: 0 10px;
+  flex: 1;
+  border: 1px solid #ccc;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  padding: 12px;
+  margin: 0 10px;
 }
 
+
+
 .container {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .color-button {
-    background-color: #f13434;
-    border: none;
-    border-radius: 30px;
-    color: white;
-    padding: 6px 12px;
-    font-size: 1.2em;
-    box-shadow: 0px 0px 10px 0px #e5a5a5;
-    cursor: pointer;
-  }
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
-  .color-button-close {
-    background-color: #f13434;
-    border: none;
-    border-radius: 30px;
-    color: white;
-    padding: 4px 8px;
-    font-size: 1.2em;
-    box-shadow: 0px 0px 10px 0px #e5a5a5;
-    cursor: pointer;
-  }
+.color-button {
+  background-color: #f13434;
+  border: none;
+  border-radius: 30px;
+  color: white;
+  padding: 6px 12px;
+  font-size: 1.2em;
+  box-shadow: 0px 0px 10px 0px #e5a5a5;
+  cursor: pointer;
+}
 
-  .windows {
-    background: rgb(255, 255, 255);
-    border: 1px solid #ccc;
-    border-radius: 22px;
-    box-shadow: 0px 5px 7px rgba(0, 0, 0, 0.1);
-    width: 18%;
-    color: #000000;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 18px;
-    text-align: center;
-    justify-content: center;
-    position: absolute;
-    padding: 33px;
-    min-height: 80px;
-    border-radius: 22px;
-    display: none;
-  }
+.color-button-close {
+  background-color: #f13434;
+  border: none;
+  border-radius: 30px;
+  color: white;
+  padding: 4px 8px;
+  font-size: 1.2em;
+  box-shadow: 0px 0px 10px 0px #e5a5a5;
+  cursor: pointer;
+}
 
-  h1 {
-    color: #e90808;  
-  }
-  
+.color-button-next {
+  background-color: #a9a7aa;
+  border: none;
+  border-radius: 30px;
+  color: white;
+  padding: 6px 12px;
+  font-size: 1.2em;
+  box-shadow: 0px 0px 10px 0px #2c2c2c;
+  cursor: pointer;
+  bottom: 20px; 
+}
+
+.windows {
+  background: rgb(255, 255, 255);
+  border: 1px solid #ccc;
+  border-radius: 22px;
+  box-shadow: 0px 5px 7px rgba(0, 0, 0, 0.1);
+  width: 18%;
+  color: #000000;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  text-align: center;
+  justify-content: center;
+  position: absolute;
+  padding: 33px;
+  min-height: 80px;
+  border-radius: 22px;
+  display: none;
+}
+
+h1 {
+  color: #e90808;
+}
