--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ img {
 
 
 .container {
-  width: 100%;
+  width: 80%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -115,19 +115,19 @@ img {
 }
 
 .windows {
-  background: rgb(255, 255, 255);
+  background: rgba(255, 255, 255, 0.623);
   border: 1px solid #ccc;
   border-radius: 22px;
   box-shadow: 0px 5px 7px rgba(0, 0, 0, 0.1);
-  width: 18%;
+  width: 70%;
   color: #000000;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 18px;
   text-align: center;
   justify-content: center;
   position: absolute;
-  padding: 33px;
-  min-height: 80px;
+  padding: 50px;
+  min-height: 100px;
   border-radius: 22px;
   display: none;
 }
