--- a/stylegalery.css
+++ b/stylegalery.css
@@ -1,13 +1,21 @@
 .gallery {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-    gap: 10px;
 }
 
-.thumbnail {
-    max-width: 200px;
+.photo {
+    margin: 10px;
     cursor: pointer;
+}
+
+.photo img {
+    max-width: 200px;
+    max-height: 150px;
+    transition: transform 0.2s;
+}
+
+.photo img:hover {
+    transform: scale(1.1);
 }
 
 .modal {
@@ -20,26 +28,22 @@
     background-color: rgba(0, 0, 0, 0.7);
     justify-content: center;
     align-items: center;
-    text-align: center;
 }
 
-.modal img {
+.modal-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
     max-width: 80%;
-    max-height: 80%;
-    border: 4px solid white;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
-    top: 0;
+    text-align: center;
+    cursor: pointer;
 }
 
-.modal p {
-    color: rgb(0, 0, 0);
-    border: 1px solid #ccc;
-    background-color: #ffffffaf;
-    border-radius: 10px;
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
-    padding: 10px;
-    margin: 0 10px;
-    
+.modal-image {
+    max-width: 100%;
+    height: auto;
+    margin-top: 10px;
 }
 
 .color-button-back {
@@ -47,34 +51,28 @@
     border: none;
     border-radius: 30px;
     color: white;
-    padding: 8px 12px;
-    box-shadow: 0px 0px 10px 0px #2c2c2c;
-    display: inline-block;
-    font-size: 16px;
-    margin-top: 1px;
+    padding: 6px 12px;
+    font-size: 1.2em;
+    box-shadow: 0px 0px 5px 0px #2c2c2c;
     cursor: pointer;
-
-}
-
-body {
-    font-family: Arial, sans-serif;
-    text-align: center;
-    background-color: #f7f7f7;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh;
-    margin: 0;
+    bottom: 20px; 
   }
 
-footer {
-    background-color: #333;
-    color: white;
-    text-align: center;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    padding-top: 8px;
-    padding-bottom: 8px;
-}
+  .container {
+    padding: 20px;
+    border: 1px solid #ccc;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+    margin: 0 auto;
+    margin-top: 15px;
+    max-width: 500px;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  h1{
+    color: red;
+  }
