--- a/stylegalery.css
+++ b/stylegalery.css
@@ -73,6 +73,23 @@
     justify-content: center;
     align-items: center;
   }
+
+.contenedor {
+    padding: 20px;
+    border: 1px solid #ccc;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+    margin: 0 auto;
+    margin-top: 15px;
+    max-width: 200px;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
   h1{
     color: red;
   }
